VE: Apply overflow fix on header
Without this, the bottom border can cross over any floating content,
which be ugly.

--- a/less/modules/editor/VisualEditorOverlay.less
+++ b/less/modules/editor/VisualEditorOverlay.less
@@ -7,6 +7,7 @@
 	h1, h2 {
 		margin-bottom: .5em;
 		border-bottom: solid 1px @sectionBorderColor;
+		overflow: hidden;
 	}
 
 	// Styling for images (as output by Parsiod)
